libs = library('trex',
               'trex.c',
               'demo.c',
               'utils.c',
               'cache.c',
               'faults.c',
               'ret2spec.c',
               'timing_array.c',
               'timer_thread.c',
               arch + '/measure_read_latency.c',
     include_directories: inc
)
